--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -575,10 +575,10 @@
         screen resolution before rendering the game scene. The background
         transparency is always disabled.<br>
         <br>
-        There are two kinds of backgrounds: horizontally oriented scrolling
-        backgrounds and vertically oriented scrolling backgrounds. It is a big
+        There are two kinds of backgrounds: the horizontally oriented scrolling
+        backgrounds and the vertically oriented scrolling backgrounds. It is a big
         image with few frames. The horizontal-oriented scrolling backgrounds
-        look like the horizontal-oriented photo ribbons. Vertically oriented
+        look like the horizontal-oriented photo ribbons. The vertically oriented
         scrolling backgrounds look like the vertically-oriented photo ribbons.<span
           style="text-decoration: underline;"><br>
         </span></big></p>
@@ -1703,7 +1703,7 @@
     <h1><a class="mozTocH1" name="mozTocId209024"></a><big>Part 7. Misc</big></h1>
     <h2><a class="mozTocH2" name="mozTocId608755"></a><big>Chapter 1. File
         system</big></h2>
-    <p><big>This module is implemented as a two simple functions. All these
+    <p><big>This module is implemented as two simple functions. All these
         functions are declared in the <span style="font-style: italic;">Filesystem</span>
         sub-namespace.<br>
         <br>
@@ -2965,6 +2965,6 @@
       9.0.7 – 9.0.8: Small changes.<br>
       9.0.9: Image resizer improved.<br>
       9.1: Small changes.<br>
-      9.1.0.1 – 9.1.0.7: Documentation updated.</big><br>
+      9.1.0.1 – 9.1.0.8: Documentation updated.</big><br>
   </body>
 </html>
