--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -306,9 +306,9 @@
     </ul>
     <h2><a class="mozTocH2" name="mozTocId56069"></a><big>Chapter 7.
         Platform-specific notes</big></h2>
-    <p><big><span style="text-decoration: underline;">Old processor support</span><br>
+    <p><big><span style="text-decoration: underline;">The old processors support</span><br>
         <br>
-        You need one of the following compilers for old processor support:<br>
+        You need one of the following compilers for the old processors support:<br>
       </big></p>
     <ul>
       <li><big>Open Watcom</big></li>
@@ -484,7 +484,7 @@
         subsystem</big></h2>
     <p><big><span style="text-decoration: underline;">An important subsystem</span><br>
         <br>
-        The picture subsystem implements the image storage.<br>
+        The picture subsystem implements image storage.<br>
         <br>
       </big><big><span style="text-decoration: underline;"> Work with the
           picture subsystem</span><br>
@@ -548,7 +548,7 @@
           Animation::check_frame(const unsigned int target) const; -</span>
         Return true if the target frame is valid.</big></p>
     <h2><a class="mozTocH2" name="mozTocId904725"></a><big>Chapter 5. Image kind</big></h2>
-    <p><big>The image kinds look like the predefined constants. You can see it
+    <p><big>The image types look like the predefined constants. You can see it
         below.</big></p>
     <table style="width: 723px; height: 106px;" border="1">
       <tbody>
@@ -913,7 +913,6 @@
         <br>
         Just use the <span style="font-style: italic;">Sprite</span> class to
         work with a sprite. It is derived from three classes: </big><big><span
-
           style="font-style: italic;">Billboard</span>, <span style="font-style: italic;">Animation,</span>
         and <span style="font-style: italic;">Picture. </span></big><big>Let's
         look at the publicly available methods.<br>
@@ -1433,6 +1432,7 @@
         column.<br>
         <br>
         <span style="font-style: italic;">int World::get_target_y(const int row</span></big><big
+
         style="font-style: italic;">,</big><big style="font-style: italic;">
         const int column</big><big><span style="font-style: italic;">) const; -</span>
         Get the target Cartesian y-coordinate </big><big>from the row and
@@ -1612,7 +1612,6 @@
         Return true if the column is valid.<br>
         <br>
         <span style="font-style: italic;">EUGENEGDK::BOX Tilemap::get_box(</span></big><big
-
         style="font-style: italic;">const </big><big style="font-style: italic;">unsigned
         int row,const unsigned int column</big><big><span style="font-style: italic;">)
           const; -</span> Return the collision-related information.<br>
@@ -2397,7 +2396,7 @@
         <br>
       </big><big><span style="font-style: italic;">FPS</span> implements the FPS
         counter. <br>
-      </big><big><em>Unicode_Convertor</em> implements the system code-page to
+      </big><big><em>Unicode_Converter</em> implements the system code page to
         UTF-16 converter.<br>
       </big><big><span style="font-style: italic;"> Render</span> implements the
         OPENGL render.<br>
@@ -2786,7 +2785,7 @@
       6.5.2: The sprite sheet subsystem has improved.<br>
       6.5.3-6.5.4: The text-drawing subsystem has improved.<br>
       6.5.5: The resource manager has improved.<br>
-      6.5.6: The processor usage reduced.<br>
+      6.5.6: The processor usage has reduced.<br>
       6.5.7-6.5.8: The small changes.<br>
       6.5.9: The small bug in the gamepad subsystem has been fixed.<br>
       6.6: The source code synced with Gray game development kit 2.2.7.<br>
@@ -2953,7 +2952,7 @@
       8.9.3: The source code synced with Black Game Development Kit 5.9.4.<br>
       8.9.4: The source code synced with Black Game Development Kit 5.9.6.<br>
       8.9.5: The keyboard input subsystem is backported from the Neon game development kit 7.9.1.<br>
-      8.9.6-8.9.7: The code-page converter has improved.<br>
+      8.9.6-8.9.7: The code page converter has improved.<br>
       8.9.8-8.9.9: The small changes.<br>
       9.0: The small bug has been fixed.<br>
       9.0.1: The small changes.<br>
@@ -2971,6 +2970,7 @@
       9.2.1: The image resizer has improved.<br>
       9.2.2: The small changes.<br>
       9.2.2.1: The documentation has been updated.<br>
+      9.2.3: The small changes.<br>
     </big>
   </body>
 </html>
