The small bug has been fixed

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2639,7 +2639,7 @@
       3.7.7-3.8.5: The small changes.<br>
       3.8.6: The gamepad subsystem has improved.<br>
       3.8.7-3.8.8: The small changes.<br>
-      3.8.9: The image resizing has improved.<br>
+      3.8.9: The image resizer has improved.<br>
       3.9-3.9.7: The small changes.<br>
       3.9.8-3.9.9: The keyboard input has improved.<br>
       4.0-4.0.1: The small changes.<br>
@@ -2971,6 +2971,7 @@
       9.2.2: The small changes.<br>
       9.2.2.1: The documentation has been updated.<br>
       9.2.3: The small changes.<br>
+      9.2.4: The small bug has been fixed.<br>
     </big>
   </body>
 </html>
